styles: fix align sisue

--- a/src/app/shared/components/markdown-render/markdown-render.component.scss
+++ b/src/app/shared/components/markdown-render/markdown-render.component.scss
@@ -14,11 +14,11 @@
   }
 
   .right-content {
-    padding-left: 1em;
+    padding: 0 2em;
   }
 }
 
-.sticky{
+.sticky {
   position: fixed;
   top: 0;
   overflow: hidden;
